2017-04-03	"An unbreakable toy is useful for breaking other toys."  (8)

		include/innocent-pear/rofl.h :
		- for ARM target:
		  - (mostly) unified logic for 0-, 2-, 3-, 4-argument
		    syscalls for g++ 4 and 5
		  - disabled use of "^" constraint modifier for g++ 4

		NEWS :
		- fixed error in 2017-04-02 entry

2017-04-02	"An unbreakable toy is useful for breaking other toys."  (7)

		include/innocent-pear/rofl.h :
		- for ARM target:
		  - `movs' -> `mov' all the way
		  - unified logic for 1-argument syscalls for g++ 4 and 5

2017-03-26	"Anything is possible, unless it's not."  (2)

		share/innocent-pear/rofl.h :
		- under g++ 5 for ARM, now (hopefully) produces better code
		  to juggle registers

		share/innocent-pear/omg.h :
		- under x86-32, tries to avoid __asm goto(...)'ing out of
		  a scope with its own local variables

2017-03-25	"Anything is possible, unless it's not."

		share/innocent-pear/doge-00.cc :
		- renamed from share/innocent-pear/doge-01.cc
		- 01 -> 00

		share/innocent-pear/doge-40.cc :
		- renamed from share/innocent-pear/doge-06.cc
		- 06 -> 40

		share/innocent-pear/doge-42.cc :
		- renamed from share/innocent-pear/doge-07.cc
		- 07 -> 42

		GNUmakefile ,
		bin/innocent-pear-front-end.tcc :
		- 01 -> 00, 06 -> 40, 07 -> 42

2017-03-19	More pointer messiness.  (4)

		share/innocent-pear/doge-01.cc :
		- now (lightly) scrambles _.innocent_pear.text.start and
		  separates it into two parts

2017-03-11	More pointer messiness.  (3)

		share/innocent-pear/doge-01.cc :
		- somewhat obscured the location of the ifunc resolving loop

		share/innocent-pear/doge-99.cc :
		- removed unneeded _.innocent_pear.text.hot.end

2017-03-05	"An unbreakable toy is useful for breaking other toys."  (6)

		share/innocent-pear/doge-i.h :
		- inhibit optimization of irel_sane(.)

2017-03-04	More pointer messiness.  (2)

		include/innocent-pear/kthxbai.h :
		- kthxbai<, S *, ...> now casts sizeof(S) to intptr_t --